--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 
     <header>
       <section class="hero">
+        <div class="bg1"></div>
+        <div class="bg2"></div>
+
         <div class="top">
           <div class="timer">
             <div class="time-card">
