--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <div class="left flex-col">
             <p class="eyebrow">13th IT SKILLS OLYMPICS</p>
 
-            <h1 class="title">AUGMENTING SECUROTY TOWARDS THE TECHNO-UTOPIA</h1>
+            <h1 class="title">AUGMENTING SECURITY TOWARDS THE TECHNO-UTOPIA</h1>
             <p class="subline">
               Get ready to showcase your skills, creativity, and passion for
               tech! With competitions across multiple IT disciplines.
